--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/output.css">
+    <link rel="stylesheet" href="css/output.css">
+    <!-- <link href="https://rawgithub.com/nternetinspired/debug-css/master/debug.css" media="all" rel="stylesheet" type="text/css" /> -->
+
 </head>
 <body>
-    
+    <div  class="font-serif ">
+        <form id="charForm">
+            <label for="charName" >Character Name
+                <input type="text" name="charName" id="charName" class="border border-6 border-red-500">
+            </label>
+            <label for="charClass" class="text-red-800 ">
+                Character Class
+                <select name="charClass" id="charClass">
+                    <option value="barbarian">Barbarian</option>
+                    <option value="rogue">Rogue</option>
+                    <option value="wizard">Wizard</option>
+                </select>
+            </label>
+            <label for="charLevel">
+                Character Level
+                <select name="charLevel" id="charLevel">
+                    <option value="lv1">1</option>
+                    <option value="lv2">2</option>
+                    <option value="lv3">3</option>
+                </select>
+            </label>
+        </form>
+    </div>
 </body>
 </html>
