basic api hookup

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
                 Character Class
                 <select name="charClass" id="charClass" required>
                     <option value="selectOne" disabled selected>Select a Class</option>
-                    <option value="barbarian">Barbarian</option>
-                    <option value="rogue">Rogue</option>
-                    <option value="wizard">Wizard</option>
                 </select>
             </label>
             <label for="charLevel">
@@ -34,10 +31,28 @@
                     <option value="lv1">1</option>
                     <option value="lv2">2</option>
                     <option value="lv3">3</option>
+                    <option value="lv3">4</option>
+                    <option value="lv3">5</option>
+                    <option value="lv3">6</option>
+                    <option value="lv3">7</option>
+                    <option value="lv3">8</option>
+                    <option value="lv3">9</option>
+                    <option value="lv3">10</option>
+                    <option value="lv3">11</option>
+                    <option value="lv3">12</option>
+                    <option value="lv3">13</option>
+                    <option value="lv3">14</option>
+                    <option value="lv3">15</option>
+                    <option value="lv3">16</option>
+                    <option value="lv3">17</option>
+                    <option value="lv3">18</option>
+                    <option value="lv3">19</option>
+                    <option value="lv3">20</option>
                 </select>
             </label>
         </form>
     </div>
+    <script src="./js/fetch_methods.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
