--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
                     <option value="lv1">1</option>
                     <option value="lv2">2</option>
                     <option value="lv3">3</option>
-                    <option value="lv3">4</option>
-                    <option value="lv3">5</option>
-                    <option value="lv3">6</option>
-                    <option value="lv3">7</option>
-                    <option value="lv3">8</option>
-                    <option value="lv3">9</option>
-                    <option value="lv3">10</option>
-                    <option value="lv3">11</option>
-                    <option value="lv3">12</option>
-                    <option value="lv3">13</option>
-                    <option value="lv3">14</option>
-                    <option value="lv3">15</option>
-                    <option value="lv3">16</option>
-                    <option value="lv3">17</option>
-                    <option value="lv3">18</option>
-                    <option value="lv3">19</option>
-                    <option value="lv3">20</option>
+                    <option value="lv4">4</option>
+                    <option value="lv5">5</option>
+                    <option value="lv6">6</option>
+                    <option value="lv7">7</option>
+                    <option value="lv8">8</option>
+                    <option value="lv9">9</option>
+                    <option value="lv10">10</option>
+                    <option value="lv11">11</option>
+                    <option value="lv12">12</option>
+                    <option value="lv13">13</option>
+                    <option value="lv14">14</option>
+                    <option value="lv15">15</option>
+                    <option value="lv16">16</option>
+                    <option value="lv17">17</option>
+                    <option value="lv18">18</option>
+                    <option value="lv19">19</option>
+                    <option value="lv20">20</option>
                 </select>
             </label>
         </form>
     </div>
-    <script src="./js/fetch_methods.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
