--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </label>
         </form>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./js/fetch_methods.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
