generates class list from API data

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <option value="lv20">20</option>
                 </select>
             </label>
+            <input type="submit" value="Create Character" id="submitButton">
         </form>
     </div>
     <script src="./js/fetch_methods.js"></script>
