console logs form data submitted

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             <label for="charName" >Character Name
                 <input type="text" name="charName" id="charName" class="border border-6 border-red-500 rounded-full">
             </label>
-            <label for="charClass" class="">
-                Character Class
+            <label for="charClass" class="">Character Class
                 <select name="charClass" id="charClass" required>
                     <option value="selectOne" disabled selected>Select a Class</option>
                 </select>
