--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <input type="submit" value="Create Character" id="submitButton">
         </form>
     </div>
-    <script src="./js/fetch_methods.js"></script>
+    <!-- <script src="./js/fetch_methods.js"></script> -->
     <script src="./js/app.js"></script>
 </body>
 </html>
