adds charRace selection

--- a/index.html
+++ b/index.html
@@ -24,29 +24,34 @@
                     <option value="selectOne" disabled selected>Select a Class</option>
                 </select>
             </label>
+            <label for="charRace" class="">Character Race
+                <select name="charRace" id="charRace" required>
+                    <option value="selectOne" disabled selected>Select a Race</option>
+                </select>
+            </label>
             <label for="charLevel">
                 Character Level
                 <select name="charLevel" id="charLevel">
-                    <option value="lv1">1</option>
-                    <option value="lv2">2</option>
-                    <option value="lv3">3</option>
-                    <option value="lv4">4</option>
-                    <option value="lv5">5</option>
-                    <option value="lv6">6</option>
-                    <option value="lv7">7</option>
-                    <option value="lv8">8</option>
-                    <option value="lv9">9</option>
-                    <option value="lv10">10</option>
-                    <option value="lv11">11</option>
-                    <option value="lv12">12</option>
-                    <option value="lv13">13</option>
-                    <option value="lv14">14</option>
-                    <option value="lv15">15</option>
-                    <option value="lv16">16</option>
-                    <option value="lv17">17</option>
-                    <option value="lv18">18</option>
-                    <option value="lv19">19</option>
-                    <option value="lv20">20</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
                 </select>
             </label>
             <input type="submit" value="Create Character" id="submitButton">
