--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <option value="20">20</option>
                 </select>
             </label></br>
-            <input type="submit" value="Create Character" id="submitButton" class="bg-grey-100 text-black font-bold py-2 px-4 rounded border-2 border-grey-500 md:mx-auto">
+            <input type="submit" value="Create Character" id="submitButton" class="bg-grey-100 text-black font-bold py-2 px-4 rounded border-2 border-grey-500 md:mx-auto m-4">
         </form>
     <!-- <script src="./js/fetch_methods.js"></script> -->
     <script src="./js/app.js"></script>
