--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-    <div id="header" class="relative bg-green-500 max-w-7x1 px-4 sm:px-6 h-8 md:h-12 w-full border-5 border-blue-500 rounded-sm ">
-        <p class="container mx-auto text-white text-left p-1 md:text-center md:p-2">NPC Generator</p>
+    <div id="header" class="relative bg-green-500 max-w-7x1 px-4 sm:px-6 w-full border-5 border-blue-500 rounded-sm ">
+        <p class="container mx-auto text-white text-left text-6xl p-1 md:text-center md:p-2">NPC Generator</p>
     </div>
         <form  id="charForm" class="font-serif border border-6 p-4 rounded-3x1 flex flex-wrap" >
             <label for="charName" class="flow-root p-2 ">Character Name <input type="text" name="charName" id="charName" class=" border-2 border-grey-500 rounded-full">
