--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 </head>
 <body>
     <div id="header" class="relative bg-green-500 max-w-7x1 px-4 sm:px-6 w-full border-5 border-blue-500 rounded-sm ">
-        <p class="container mx-auto text-white text-left text-6xl p-1 md:text-center md:p-2">NPC Generator</p>
+        <p class="container mx-auto text-white text-left text-6xl p-1 sm:text-center sm:p-2">NPC Generator</p>
     </div>
-        <form  id="charForm" class="font-serif border border-6 p-4 rounded-3x1 flex flex-wrap" >
-            <label for="charName" class="flow-root p-2 ">Character Name <input type="text" name="charName" id="charName" class=" border-2 border-grey-500 rounded-full">
+        <form  id="charForm" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 sm:grid-cols-2 sm:grid-rows-2 md:max-w-4xl" >
+            <label for="charName" class=" p-2 ">Character Name <input type="text" name="charName" id="charName" class=" border-2 border-grey-500 rounded-full">
             </label>
-            <label for="charClass" class="flow-root p-2 ">Character Class <select name="charClass" id="charClass" required class="border-2 border-grey-500 rounded-full">
+            <label for="charClass" class=" p-2 ">Character Class <select name="charClass" id="charClass" required class="border-2 border-grey-500 rounded-full">
                     <option value="selectOne" disabled selected >Select a Class</option>
                 </select>
             </label>
-            <label for="charRace" class="flow-root p-2 md:inline-block">Character Race <select name="charRace" id="charRace" required class="border-2 border-grey-500 rounded-full">
+            <label for="charRace" class=" p-2 ">Character Race <select name="charRace" id="charRace" required class="border-2 border-grey-500 rounded-full">
                     <option value="selectOne" disabled selected>Select a Race</option>
                 </select>
             </label>
-            <label for="charLevel" class="flow-root p-2 md:inline-block">
+            <label for="charLevel" class=" p-2 ">
                 Character Level <select name="charLevel" id="charLevel" class="border-2 border-grey-500 rounded-full">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -48,7 +48,7 @@
                     <option value="20">20</option>
                 </select>
             </label></br>
-            <input type="submit" value="Create Character" id="submitButton" class="bg-grey-100 text-black font-bold py-2 px-4 rounded border-2 border-grey-500 md:mx-auto m-4">
+            <input type="submit" value="Create Character" id="submitButton" class="bg-grey-100 text-black font-bold py-2 px-4 rounded border-2 border-grey-500 mx-auto m-4 sm:col-span-2">
         </form>
     <!-- <script src="./js/fetch_methods.js"></script> -->
     <script src="./js/app.js"></script>
