--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div id="header" class="relative bg-green-500 max-w-7x1 px-4 sm:px-6 w-full border-5 border-blue-500 rounded-sm ">
-        <p class="container mx-auto text-white text-left text-6xl p-1 sm:text-center sm:p-2">NPC Generator</p>
+        <p class="container mx-auto text-white text-left text-5xl sm:text-6xl p-1 sm:text-center sm:p-2">NPC Generator</p>
     </div>
-        <form  id="charForm" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 sm:grid-cols-2 sm:grid-rows-2 md:max-w-4xl" >
+        <form  id="charForm" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 sm:grid-cols-2 sm:grid-rows-2 md:max-w-3xl md:mx-auto" >
             <label for="charName" class=" p-2 ">Character Name <input type="text" name="charName" id="charName" class=" border-2 border-grey-500 rounded-full">
             </label>
             <label for="charClass" class=" p-2 ">Character Class <select name="charClass" id="charClass" required class="border-2 border-grey-500 rounded-full">
