add section to display results

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </label></br>
             <input type="submit" value="Create Character" id="submitButton" class="bg-grey-100 text-black font-bold py-2 px-4 rounded border-2 border-grey-500 mx-auto m-4 sm:col-span-2">
         </form>
-    <!-- <script src="./js/fetch_methods.js"></script> -->
+        <div id="charDisplay"></div>
     <script src="./js/app.js"></script>
 </body>
 </html>
