--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 </head>
 <body>
-    <div id="header" class="relative bg-green-500 max-w-7x1 px-4 sm:px-6 w-full border-5 border-blue-500 rounded-sm ">
+    <div id="header" class="relative bg-green-500 max-w-7x1 px-4 sm:px-6 w-full border-5 border-blue-500 rounded-sm shadow-md ">
         <p class="container mx-auto text-white text-left text-5xl sm:text-6xl p-1 sm:text-center sm:p-2">NPC Generator</p>
     </div>
-        <form  id="charForm" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 sm:grid-cols-2 sm:grid-rows-2 md:max-w-3xl md:mx-auto" >
+        <form  id="charForm" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 sm:grid-cols-2 sm:grid-rows-2 md:max-w-3xl md:mx-auto shadow" >
             <label for="charName" class=" p-2 ">Character Name <input type="text" name="charName" id="charName" class=" border-2 border-grey-500 rounded-full">
             </label>
             <label for="charClass" class=" p-2 ">Character Class <select name="charClass" id="charClass" required class="border-2 border-grey-500 rounded-full">
@@ -48,7 +48,7 @@
                     <option value="20">20</option>
                 </select>
             </label></br>
-            <input type="submit" value="Create Character" id="submitButton" class="bg-grey-100 text-black font-bold py-2 px-4 rounded border-2 border-grey-500 mx-auto m-4 sm:col-span-2">
+            <input type="submit" value="Create Character" id="submitButton" class="bg-grey-100 text-black font-bold py-2 px-4 rounded border-2 border-grey-500 mx-auto m-4 sm:col-span-2 shadow-sm">
         </form>
         <div id="charDisplay"></div>
     <script src="./js/app.js"></script>
