--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div id="charDisplay" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 sm:grid-cols-2 sm:grid-rows-2 md:max-w-3xl md:mx-auto shadow">
             
         </div>
+    <script src="./js/characterClass.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
