styling on character display so it's not terrible

--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
             </label></br>
             <input type="submit" value="Create Character" id="submitButton" class="bg-grey-100 text-black font-bold py-2 px-4 rounded border-2 border-grey-500 mx-auto m-4 sm:col-span-2 shadow-sm">
         </form>
-        <div id="charDisplay" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 sm:grid-cols-2 sm:grid-rows-2 md:max-w-3xl md:mx-auto shadow hidden">
-            
-        </div>
+        <div id="charDisplay" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 gap-2 sm:gap-4 sm:grid-cols-2 sm:grid-rows-2 max-w-sm sm:max-w-full md:max-w-3xl mx-auto shadow hidden"></div>
     <script src="./js/characterClass.js"></script>
     <script src="./js/app.js"></script>
 </body>
