--- a/index.html
+++ b/index.html
@@ -13,20 +13,28 @@
     <div id="header" class="relative bg-green-500 max-w-7x1 px-4 sm:px-6 w-full border-5 border-blue-500 rounded-sm shadow-md ">
         <p class="container mx-auto text-white text-left text-5xl sm:text-6xl p-1 sm:text-center sm:p-2">NPC Generator</p>
     </div>
-        <form  id="charForm" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 sm:grid-cols-2 sm:grid-rows-2 md:max-w-3xl md:mx-auto shadow" >
-            <label for="charName" class=" p-2 ">Character Name <input type="text" name="charName" id="charName" class=" border-2 border-grey-500 rounded-full">
-            </label>
-            <label for="charClass" class=" p-2 ">Character Class <select name="charClass" id="charClass" required class="border-2 border-grey-500 rounded-full">
-                    <option value="selectOne" disabled selected >Select a Class</option>
-                </select>
-            </label>
-            <label for="charRace" class=" p-2 ">Character Race <select name="charRace" id="charRace" required class="border-2 border-grey-500 rounded-full">
-                    <option value="selectOne" disabled selected>Select a Race</option>
-                </select>
-            </label>
-            <input type="submit" value="Create New Character" id="submitButton" class="bg-grey-100 text-black font-bold py-2 px-4 rounded border-2 border-grey-500 mx-auto m-4 sm:col-span-2 shadow-sm">
-        </form>
-        <div id="charDisplay" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 gap-2 sm:gap-4 sm:grid-cols-2 sm:grid-rows-2 max-w-sm sm:max-w-full md:max-w-3xl mx-auto shadow hidden"></div>
+
+    <div id="buttonArea" class="flex bg-gray-50 md:max-w-3xl mx-auto content-center">
+        <button id="saveButton" class="bg-gray-100 text-black font-bold py-2 px-4 rounded border-2 border-gray-300 my-4 mx-auto shadow-sm hidden">Save Character</button>
+        <button id="loadButton" class="bg-gray-100 text-black font-bold py-2 px-4 rounded border-2 border-gray-300 my-4 mx-auto shadow-sm">Load a Character</button>
+        <button id="newButton" class="bg-gray-100 text-black font-bold py-2 px-4 rounded border-2 border-gray-300 my-4 mx-auto shadow-sm hidden">Create New Character</button>       
+    </div>   
+
+    <form  id="charForm" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 sm:grid-cols-2 sm:grid-rows-2 md:max-w-3xl md:mx-auto shadow" >
+        <label for="charName" class=" p-2 ">Character Name <input type="text" name="charName" id="charName" class=" border-2 rounded-full">
+        </label>
+        <label for="charClass" class=" p-2 ">Character Class <select name="charClass" id="charClass" required class="border-2 rounded-full">
+                <option value="selectOne" disabled selected >Select a Class</option>
+            </select>
+        </label>
+        <label for="charRace" class=" p-2 ">Character Race <select name="charRace" id="charRace" required class="border-2 rounded-full">
+                <option value="selectOne" disabled selected>Select a Race</option>
+            </select>
+        </label>
+        <input type="submit" value="Create New Character" id="submitButton" class="bg-gray-100 text-black font-bold py-2 px-4 rounded border-2 border-gray-200 mx-auto m-4 sm:col-span-2 shadow-sm">
+    </form>
+
+    <div id="charDisplay" class="font-serif border border-6 p-4 rounded-3x1 grid grid-cols-1 gap-2 sm:gap-4 sm:grid-cols-2 sm:grid-rows-2 max-w-sm sm:max-w-full md:max-w-3xl mx-auto shadow hidden"></div>
     <script src="./js/characterClass.js"></script>
     <script src="./js/app.js"></script>
 </body>
